--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 col-md-offset-3">
             <div class="panel  panel-primary">
                 <div class="panel-heading">
                     <h1 class="panel-title">My Recipes!</h1>
@@ -24,15 +24,13 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
-                                <th>Directions</th>
-                                <th>Notes</th>
+                                <th>View Recipe</th>
                             </tr>
                             </thead>
                             <tr th:each="recipe : ${recipes}">
                                 <td th:text="${recipe.id}">123</td>
-                                <td th:text="${recipe.description}">Tasty Goodnees3</td>
-                                <td th:text="${recipe.directions}">How to make</td>
-                                <td th:text="${recipe.notes.recipeNotes}">Notes</td>
+                                <td th:text="${recipe.description}">Tasty Goodnees</td>
+                                <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
                             </tr>
                         </table>
                     </div>
